--- a/Ch2_Euclidean_Space_Ex_2.4.ipynb
+++ b/Ch2_Euclidean_Space_Ex_2.4.ipynb
@@ -1270,7 +1270,7 @@
    "id": "d5014c4a",
    "metadata": {},
    "source": [
-    "<b> Question 9</b><br>\n",
+    "<b>Question 9</b><br>\n",
     "\n",
     "\n",
     "Let $u = \\begin{pmatrix}\n",
@@ -1294,12 +1294,12 @@
     "For linear combination $k_1u + k_2v = 0$ \n",
     "if $k_1 = k_2 = 0$ then independent, otherwise dependent\n",
     "\n",
-    "Here, $k_1\\begin{pmatrix}\n",
+    "Here,<br>\n",
+    "$k_1\\begin{pmatrix}\n",
     "1\\\\\n",
     "5\\\\\n",
     "0\\\\\n",
-    "\\end{pmatrix}\n",
-    "+ k_2\\begin{pmatrix}\n",
+    "\\end{pmatrix}+ k_2\\begin{pmatrix}\n",
     "0\\\\\n",
     "1\\\\\n",
     "0\\\\\n",
@@ -1324,13 +1324,14 @@
     "\n",
     "Hence, vector $u$ and $v$ are <b>linearly independent</b>\n",
     "\n",
-    "<b>Solution (b)</b>The space spanned by given vector $u$ and $v$ is linear combination of $u$ and $v$ with any real $k_1, k_2$ and as:<br>\n",
-    " $k_1\\begin{pmatrix}\n",
+    "<b>Solution (b)</b>\n",
+    "\n",
+    "The space spanned by given vector $u$ and $v$ is linear combination of $u$ and $v$ with any real $k_1, k_2$ and as:<br>\n",
+    "$k_1\\begin{pmatrix}\n",
     "1\\\\\n",
     "5\\\\\n",
     "0\\\\\n",
-    "\\end{pmatrix}\n",
-    "+ k_2\\begin{pmatrix}\n",
+    "\\end{pmatrix}+ k_2\\begin{pmatrix}\n",
     "0\\\\\n",
     "1\\\\\n",
     "0\\\\\n",
@@ -1348,7 +1349,7 @@
     "\n",
     "Thus, we get vector $u, v$ span $x-y plane$\n",
     "\n",
-    "<b>Soltion(c)</b>\n",
+    "<b>Solution(c)</b>\n",
     "\n",
     "To get a general vector 𝑤 such that {𝑢,𝑣,𝑤} form a basis for $\\mathbb{R}^3$, we need $w$ linearly independent of $u =\\begin{pmatrix}\n",
     "1\\\\\n",
