--- a/Ch6_Det_&_Inv_Matrix_Ex6.2.ipynb
+++ b/Ch6_Det_&_Inv_Matrix_Ex6.2.ipynb
@@ -980,6 +980,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7ec1f477",
+   "metadata": {},
+   "source": [
+    "----------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ddd727e4",
    "metadata": {},
    "source": [
@@ -991,7 +999,9 @@
     "cos\\theta sin\\phi&-\\rho sin\\theta sin\\phi& \\rho cos\\theta cos\\phi\\\\\n",
     "sin\\theta sin\\phi&\\rho cos\\theta sin\\phi & \\rho sin\\theta cos\\phi\\\\\n",
     "cos\\phi &0 &-\\rho sin\\phi\\\\\n",
-    "\\end{pmatrix} \\right|$$"
+    "\\end{pmatrix} \\right|$$\n",
+    "\n",
+    "This determinant is used in change-of-variable formulae when studying multivariable calculus. This is used to transform from $(x, y, z)$ coordinates to spherical coordinates $(\\rho, \\theta \\phi)$. Show that $J = \\rho^{2}sin\\phi$"
    ]
   },
   {
@@ -1026,9 +1036,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5a0703b5",
+   "metadata": {},
+   "source": [
+    "----------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "306ffce8",
+   "metadata": {},
+   "source": [
+    "<b> Question 18 </b> \n",
+    "\n",
+    "The Wronskian $W(f, g, h) = det\\begin{pmatrix}\n",
+    "f(x)&g(x)&h(x)\\\\\n",
+    "f'(x)&g'(x)&h'(x)\\\\\n",
+    "f''(x)&g''(x)&h''(x)\\\\\n",
+    "\\end{pmatrix}$. Determine $W(1, cos(x), sin(x))$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94d2faeb",
+   "metadata": {},
+   "source": [
+    "<b> Solution</b>\n",
+    "\n",
+    "We know that,<br>\n",
+    "derivative of $cos(x)$ as $-sin(x)$<br>\n",
+    "second derivative of $cos(x)$ as $-cos(x)$<br>\n",
+    "derivative of $sin(x)$ as $cos(x)$<br>\n",
+    "second derivative of $sin(x)$ as $-sin(x)$\n",
+    "\n",
+    "Now, our Wronskian $W(f, g, h) = det\\begin{pmatrix}\n",
+    "1&cos(x)&sin(x)\\\\\n",
+    "0&-sin(x)&cos(x)\\\\\n",
+    "0&-cos(x)&-sin(x)\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "Solving it,we get<br>\n",
+    "\n",
+    "$(-sin(x)(-sin(x) -(-cos(x)cos(x))$<br>\n",
+    "$= sin^{2}x + cos^{2}x$<br>\n",
+    "$= 1$\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d309ed0d",
+   "id": "c9c06eb5",
    "metadata": {},
    "outputs": [],
    "source": []
