--- a/Ch6_Det_&_Inv_Matrix_Ex6.4.ipynb
+++ b/Ch6_Det_&_Inv_Matrix_Ex6.4.ipynb
@@ -289,7 +289,7 @@
     "0&7&19\\\\\n",
     "\\end{pmatrix}$\n",
     "\n",
-    "Step 4: $R_{3} = R_{3} - 7R_{3}$\n",
+    "Step 4: $R_{3} = R_{3} - 7R_{2}$\n",
     "\n",
     "$\\begin{pmatrix}\n",
     "2&1&3\\\\\n",
@@ -347,7 +347,105 @@
     "10\\\\\n",
     "\\end{pmatrix}$\n",
     "\n",
-    "Solving this, we get $x_{1} = -2,, x_{2} = 3$, and $x_{3} = 2$"
+    "Solving this, we get $x_{1} = -2,, x_{2} = 3$, and $x_{3} = 2$\n",
+    "\n",
+    "\n",
+    "<b>Solution(d)</b>\n",
+    "\n",
+    "$A = \\begin{pmatrix}\n",
+    "1&2&3\\\\\n",
+    "3&-9&-12\\\\\n",
+    "-1&8&18\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "Now, to get $U$ - upper triangular matrix\n",
+    "\n",
+    "Step 1: $R_2 = R_{2} - 3R_{1}$\n",
+    "\n",
+    "$\\begin{pmatrix}\n",
+    "1&2&3\\\\\n",
+    "0&-15&-21\\\\\n",
+    "-1&8&18\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "Step 2: $R_3 = R_{3} + R_{1}$\n",
+    "\n",
+    "$\\begin{pmatrix}\n",
+    "1&2&3\\\\\n",
+    "0&-15&-21\\\\\n",
+    "0&10&21\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "Step 3: $R_2 = R_{2} - \\frac{1}{-3}R_{2}$\n",
+    "\n",
+    "$\\begin{pmatrix}\n",
+    "1&2&3\\\\\n",
+    "0&5&7\\\\\n",
+    "0&10&21\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "Step 4: $R_{3} = R_{3} - 2R_{2}$\n",
+    "\n",
+    "$\\begin{pmatrix}\n",
+    "1&2&3\\\\\n",
+    "0&5&7\\\\\n",
+    "0&0&75\\\\\n",
+    "\\end{pmatrix}= U$ This is the upper triangular matrix, $U$\n",
+    "\n",
+    "Now, using negative multipliers from the step1 , step2, step3, and step4, and with $3 \\times 3$ matrix $I$<br>\n",
+    "We get, <br>\n",
+    "$L = \\begin{pmatrix}\n",
+    "1&0&0\\\\\n",
+    "3&-3&0\\\\\n",
+    "-1&2&1\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "Next, we can solve <b>$Ly = b$</b> to get y:\n",
+    "\n",
+    "$\\begin{pmatrix}\n",
+    "1&0&0\\\\\n",
+    "3&-3&0\\\\\n",
+    "-1&2&1\\\\\n",
+    "\\end{pmatrix} \\cdot \\begin{pmatrix}\n",
+    "y_{1}\\\\\n",
+    "y_{2}\\\\\n",
+    "y_{3}\\\\\n",
+    "\\end{pmatrix} = \\begin{pmatrix}\n",
+    "-5\\\\\n",
+    "9\\\\\n",
+    "-4\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "$\\Rightarrow y_{1} = -5$<br>\n",
+    "Next,<br>\n",
+    "$3y_{1} -3y_{2} = 9$<br>\n",
+    "$\\Rightarrow 3(-5) -3y_{2} =9$<br>\n",
+    "$\\Rightarrow -3y_{2} = 9 + 14$<br>\n",
+    "$\\Rightarrow y_{2} = -8$\n",
+    "\n",
+    "Then, <br>\n",
+    "$-y_{1} + 2y_{2} + y_{3} = -4$<br>\n",
+    "$-(-5) +2(-8) + y_{3} = -4$<br>\n",
+    "$\\Rightarrow 5 - 16 = -4$<br>\n",
+    "$\\Rightarrow y_{3} = -4 + 11 = 7$<br>\n",
+    "\n",
+    "Next, solving $Ux = y$ to get our solution\n",
+    "\n",
+    "$\\begin{pmatrix}\n",
+    "1&2&3\\\\\n",
+    "0&5&7\\\\\n",
+    "0&0&7\\\\\n",
+    "\\end{pmatrix} \\cdot \\begin{pmatrix}\n",
+    "x_{1}\\\\\n",
+    "x_{2}\\\\\n",
+    "x_{3}\\\\\n",
+    "\\end{pmatrix} = \\begin{pmatrix}\n",
+    "-5\\\\\n",
+    "-8\\\\\n",
+    "7\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "Solving this, we get $x_{1} = -2, x_{2} = -3$ and $x_{3} = 1$"
    ]
   },
   {
@@ -385,7 +483,152 @@
    "id": "8a7a96f3",
    "metadata": {},
    "source": [
-    "<b>Solution</b>"
+    "<b>Solution</b>\n",
+    "\n",
+    "Step 1 : $R_{2} = R_{2} - 17R_{1}$\n",
+    "\n",
+    "$\\begin{pmatrix}\n",
+    "1&2&3&4\\\\\n",
+    "0&-12&-24&60\\\\\n",
+    "77&44&47&-494\\\\\n",
+    "-10&1&7&63\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "Step 2: $R_{2} = \\frac{1}{-12}R_{2}$\n",
+    "\n",
+    "$\\begin{pmatrix}\n",
+    "1&2&3&4\\\\\n",
+    "0&1&2&5\\\\\n",
+    "77&44&47&-494\\\\\n",
+    "-10&1&7&63\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "Step 3: $R_{3} = R_{3} - 77R_{1}$\n",
+    "\n",
+    "$\\begin{pmatrix}\n",
+    "1&2&3&4\\\\\n",
+    "0&1&2&5\\\\\n",
+    "0&-110&-184&-802\\\\\n",
+    "-10&1&7&63\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "Step 4: $R_{3} = R_{3} + 110R_{2}$\n",
+    "\n",
+    "$\\begin{pmatrix}\n",
+    "1&2&3&4\\\\\n",
+    "0&1&2&5\\\\\n",
+    "0&0&36&-252\\\\\n",
+    "-10&1&7&63\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "Step 5: $R_{4} = R_{4} + 10R_{1}$\n",
+    "\n",
+    "$\\begin{pmatrix}\n",
+    "1&2&3&4\\\\\n",
+    "0&1&2&5\\\\\n",
+    "0&0&36&-252\\\\\n",
+    "0&21&37&103\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "Step 6: $R_{4} = R_{4} - 21R_{2}$\n",
+    "\n",
+    "$\\begin{pmatrix}\n",
+    "1&2&3&4\\\\\n",
+    "0&1&2&5\\\\\n",
+    "0&0&36&-252\\\\\n",
+    "0&0&-5&-2\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "Step 7: $R_{3} = \\frac{1}{36}R_{3}$\n",
+    "\n",
+    "$\\begin{pmatrix}\n",
+    "1&2&3&4\\\\\n",
+    "0&1&2&5\\\\\n",
+    "0&0&1&-7\\\\\n",
+    "0&0&-5&-2\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "Step 8: $R_{4} = R_{4} - 5R_{3}$\n",
+    "\n",
+    "$\\begin{pmatrix}\n",
+    "1&2&3&4\\\\\n",
+    "0&1&2&5\\\\\n",
+    "0&0&1&-7\\\\\n",
+    "0&0&0&-37\\\\\n",
+    "\\end{pmatrix} = U$\n",
+    "\n",
+    "Collecting negative multipliers from $step1, \\dots step8$ we can get Lower triangular matrix, $L$ as: \n",
+    "\n",
+    "$L = \\begin{pmatrix}\n",
+    "1&0&0&0\\\\\n",
+    "17&-12&0&0\\\\\n",
+    "77&-110&36&0\\\\\n",
+    "-10&21&-5&1\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "Next, solving $Ly = b$ to get y<br>\n",
+    "$\\begin{pmatrix}\n",
+    "1&0&0&0\\\\\n",
+    "17&-12&0&0\\\\\n",
+    "77&-110&36&0\\\\\n",
+    "-10&21&-5&1\\\\\n",
+    "\\end{pmatrix} \\cdot \\begin{pmatrix}\n",
+    "y_1\\\\\n",
+    "y_2\\\\\n",
+    "y_3\\\\\n",
+    "y_4\\\\\n",
+    "\\end{pmatrix} = \\begin{pmatrix}\n",
+    "-10\\\\\n",
+    "22\\\\\n",
+    "2106\\\\\n",
+    "-243\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "$\\Rightarrow y_{1} = -10$\n",
+    "\n",
+    "Next,<br>\n",
+    "$17y_{1} - 12y_{2} = 22$<br>\n",
+    "$\\Rightarrow 17(-10) - 12y_{2} = 22$<br>\n",
+    "$\\Rightarrow -170 - 12y_{2} = 22$\n",
+    "\n",
+    "$\\Rightarrow y_{2} = \\frac{192}{-12} = -16$\n",
+    "\n",
+    "Then<br>\n",
+    "$77y_{1} -110y_{2} + 36y_{3} = 2106$<br>\n",
+    "$\\Rightarrow 77(-10) -110(-16) + 36y_{3} = 2106$<br>\n",
+    "$\\Rightarrow -770 + 1760 + 36y_{3} = 2106$<br>\n",
+    "$\\Rightarrow 36y_{3} = 2106 - 990$\n",
+    "\n",
+    "$\\Rightarrow y_{3} = \\frac{1116}{36} = 31$\n",
+    "\n",
+    "Then, <br>\n",
+    "$-10y_{1} + 21y_{2} - 5y_{3} + y_{4} = -243$<br>\n",
+    "$-10(-10) + 21(-16) -5(31) + y_{4} = -243$<br>\n",
+    "$\\Rightarrow 100 -336 - 155 + y_{4} = -243$\n",
+    "\n",
+    "$\\Rightarrow y_{4} = -243 + 391 = 148$\n",
+    "\n",
+    "\n",
+    "Now, solving $Ux = y$ to get the solution\n",
+    "\n",
+    "$\\begin{pmatrix}\n",
+    "1&2&3&4\\\\\n",
+    "0&1&2&5\\\\\n",
+    "0&0&1&-7\\\\\n",
+    "0&0&0&-37\\\\\n",
+    "\\end{pmatrix} \\cdot \\begin{pmatrix}\n",
+    "x_{1}\\\\\n",
+    "x_{2}\\\\\n",
+    "x_{3}\\\\\n",
+    "x_{4}\\\\\n",
+    "\\end{pmatrix} = \\begin{pmatrix}\n",
+    "-10\\\\\n",
+    "-16\\\\\n",
+    "31\\\\\n",
+    "148\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "Solving this, we get <b>our solution as $x_{1} = 1, x_{2} = -2, x_{3} = 3$ and $x_{4} = -4$\n"
    ]
   },
   {
@@ -411,7 +654,37 @@
    "id": "b6e47ab6",
    "metadata": {},
    "source": [
-    "<b> Solution</b> "
+    "<b> Solution</b> \n",
+    "\n",
+    "We can write given matrix A as $A = LU$ representing :\n",
+    "\n",
+    "$A =  \\begin{pmatrix}\n",
+    "1&0&0&0\\\\\n",
+    "17&-12&0&0\\\\\n",
+    "77&-110&36&0\\\\\n",
+    "-10&21&-5&1\\\\\n",
+    "\\end{pmatrix} \\cdot \\begin{pmatrix}\n",
+    "1&2&3&4\\\\\n",
+    "0&1&2&5\\\\\n",
+    "0&0&1&-7\\\\\n",
+    "0&0&0&-37\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "Then, $det(A)$ is given by $det(A) = det(LU)$\n",
+    "\n",
+    "$\\Rightarrow det(A) = det(L) \\times det(U)$\n",
+    "\n",
+    "$det(A) = \\left[1 \\times (-12) \\times 36 \\times1)\\right] \\times \\left[1 \\times 1 \\times 1 \\times - 37 \\right]$\n",
+    "\n",
+    "$det(A) = 15984$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad9594c8",
+   "metadata": {},
+   "source": [
+    "-------------------------------------------"
    ]
   },
   {
@@ -425,6 +698,35 @@
     "0&4&5\\\\\n",
     "0&0&6\\\\\n",
     "\\end{pmatrix}$ into LU"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ade3c0ee",
+   "metadata": {},
+   "source": [
+    "<b> Solution </b> \n",
+    "\n",
+    "Given matrix is already an upper triangular matrix, therefore we need only identity matrix $I$ as lower triangular matrix.\n",
+    "\n",
+    "Therefore, <br>\n",
+    "$ A = \\begin{pmatrix}\n",
+    "1&0&0\\\\\n",
+    "0&1&0\\\\\n",
+    "0&0&1\\\\\n",
+    "\\end{pmatrix} \\cdot \\begin{pmatrix}\n",
+    "1&2&3\\\\\n",
+    "0&4&5\\\\\n",
+    "0&0&6\\\\\n",
+    "\\end{pmatrix}$  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b71bc4c9",
+   "metadata": {},
+   "source": [
+    "----------------------------------"
    ]
   },
   {
@@ -450,6 +752,214 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a6a7132e",
+   "metadata": {},
+   "source": [
+    "<b>Solution (a)</b>\n",
+    "\n",
+    "Here, $A = \\begin{pmatrix}\n",
+    "1&2&3\\\\\n",
+    "3&7&14\\\\\n",
+    "4&13&38\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "Step 1: $R_{2} = R_{2} - 3R_{1}$ and step 2: $R_3 = R_{3} - 4R_{1}$, we have<br>\n",
+    "$\\begin{pmatrix}\n",
+    "1&2&3\\\\\n",
+    "0&1&5\\\\\n",
+    "0&5&26\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "Step 3: $R_{3} = R_{3} - 5R_{2}$<br>\n",
+    "$\\begin{pmatrix}\n",
+    "1&2&3\\\\\n",
+    "0&1&5\\\\\n",
+    "0&0&1\\\\\n",
+    "\\end{pmatrix} = U$\n",
+    "\n",
+    "Then, collecting negative multipliers from the step 1, step 2 and step 3, we have $L$ as:<br>\n",
+    "$L = \\begin{pmatrix}\n",
+    "1&0&0\\\\\n",
+    "3&1&0\\\\\n",
+    "4&5&1\\\\\n",
+    "\\end{pmatrix}\n",
+    "$\n",
+    "\n",
+    "Therefore, A can be written as:\n",
+    "\n",
+    "$A = \\begin{pmatrix}\n",
+    "1&2&3\\\\\n",
+    "0&1&5\\\\\n",
+    "0&0&1\\\\\n",
+    "\\end{pmatrix} \\cdot \\begin{pmatrix}\n",
+    "1&0&0\\\\\n",
+    "3&1&0\\\\\n",
+    "4&5&1\\\\\n",
+    "\\end{pmatrix}\n",
+    "$\n",
+    "\n",
+    "<b>Solution (b)</b>\n",
+    "\n",
+    "We know that, $A = LU$<br>\n",
+    "Therefore, <br>\n",
+    "$A^{-1} = (LU)^{-1}$\n",
+    "\n",
+    "And, as if $A$ and $B$ is invertible, then $(AB)^{-1} = B^{-1}A^{-1}$.\n",
+    "\n",
+    "Therefore, $A^{-1} = U^{-1}L^{-1}$\n",
+    "\n",
+    "So, $U^{-1} = (U | I)$ <br>\n",
+    "$\\qquad = \\left(\\begin{array}{ccc|ccc}\n",
+    "1&2&3&1&0&0\\\\\n",
+    "0&1&5&0&1&0\\\\\n",
+    "0&0&1&0&0&1\\\\\n",
+    "\\end{array}\n",
+    "\\right)$\n",
+    "\n",
+    "Step 1: $R_{1} = R_{1} - 2R_{2}$\n",
+    "\n",
+    "$= \\left(\\begin{array}{ccc|ccc}\n",
+    "1&0&-7&1&-2&0\\\\\n",
+    "0&1&5&0&1&0\\\\\n",
+    "0&0&1&0&0&1\\\\\n",
+    "\\end{array}\n",
+    "\\right)$\n",
+    "\n",
+    "Step 2: $R_{1} =  R_{1} +7R_{3}$ and $R_{2} = R_{2} - 5R_{3}$\n",
+    "\n",
+    "$= \\left(\\begin{array}{ccc|ccc}\n",
+    "1&0&0&1&-2&7\\\\\n",
+    "0&1&0&0&1&-5\\\\\n",
+    "0&0&1&0&0&1\\\\\n",
+    "\\end{array}\n",
+    "\\right)$\n",
+    "\n",
+    "Therefore, $U^{-1} = \\begin{pmatrix}\n",
+    "1&-2&7\\\\\n",
+    "0&1&-5\\\\\n",
+    "0&0&1\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "Similarly, \n",
+    "\n",
+    "$L^{-1} = (L | I)$\n",
+    "\n",
+    "$\\qquad = \\left(\\begin{array}{ccc|ccc}\n",
+    "1&0&0&1&0&0\\\\\n",
+    "3&1&0&0&1&0\\\\\n",
+    "4&5&1&0&0&1\\\\\n",
+    "\\end{array}\n",
+    "\\right)$\n",
+    "\n",
+    "Step 1: $R_{2} = R_{2} - 3R_{1}$ and $R_{3} = R_{3} - 4R_{1}$\n",
+    "\n",
+    "$\\qquad = \\left(\\begin{array}{ccc|ccc}\n",
+    "1&0&0&1&0&0\\\\\n",
+    "0&1&0&-3&1&0\\\\\n",
+    "0&5&1&-4&0&1\\\\\n",
+    "\\end{array}\n",
+    "\\right)$\n",
+    "\n",
+    "Step 2: $R_{3} = R_{3} - 5R_{2}$\n",
+    "\n",
+    "$\\qquad = \\left(\\begin{array}{ccc|ccc}\n",
+    "1&0&0&1&0&0\\\\\n",
+    "0&1&0&-3&1&0\\\\\n",
+    "0&0&1&11&-5&1\\\\\n",
+    "\\end{array}\n",
+    "\\right)$\n",
+    "\n",
+    "$L^{-1} = \\begin{pmatrix}\n",
+    "1&0&0\\\\\n",
+    "-3&1&0\\\\\n",
+    "11&-5&1\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "$A^{-1} = U^{-1}L^{-1} = \\begin{pmatrix}\n",
+    "1&-2&7\\\\\n",
+    "0&1&-5\\\\\n",
+    "0&0&1\\\\\n",
+    "\\end{pmatrix} \\cdot \\begin{pmatrix}\n",
+    "1&0&0\\\\\n",
+    "-3&1&0\\\\\n",
+    "11&-5&1\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "$\\Rightarrow A^{-1} = \\begin{pmatrix}\n",
+    "84&-37&7\\\\\n",
+    "-58&26&-5\\\\\n",
+    "11&-5&1\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "<b>Solution(c) (i)</b>\n",
+    "\n",
+    "We have, $b = \\begin{pmatrix}\n",
+    "1\\\\\n",
+    "2\\\\\n",
+    "3\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "To get $x$ for $Ax = b$, we can compute as:\n",
+    "\n",
+    "$x = A^{-1}b = \\begin{pmatrix}\n",
+    "84&-37&7\\\\\n",
+    "-58&26&-5\\\\\n",
+    "11&-5&1\\\\\n",
+    "\\end{pmatrix} \\cdot \\begin{pmatrix}\n",
+    "1\\\\\n",
+    "2\\\\\n",
+    "3\\\\\n",
+    "\\end{pmatrix} = \\begin{pmatrix}\n",
+    "84(1) - 37(2) +7(3)\\\\\n",
+    "-58(1) + 26(2) -5(3)\\\\\n",
+    "11(1) -5(2) +1(3)\\\\\n",
+    "\\end{pmatrix} = \\begin{pmatrix}\n",
+    "31\\\\\n",
+    "-21\\\\\n",
+    "4\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "\n",
+    "\n",
+    "Solution(c) (i)</b>\n",
+    "\n",
+    "We have, $b = \\begin{pmatrix}\n",
+    "-1\\\\\n",
+    "3\\\\\n",
+    "1\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "To get $x$ for $Ax = b$, we can compute as:\n",
+    "\n",
+    "$x = A^{-1}b = \\begin{pmatrix}\n",
+    "84&-37&7\\\\\n",
+    "-58&26&-5\\\\\n",
+    "11&-5&1\\\\\n",
+    "\\end{pmatrix} \\cdot \\begin{pmatrix}\n",
+    "-1\\\\\n",
+    "3\\\\\n",
+    "1\\\\\n",
+    "\\end{pmatrix} = \\begin{pmatrix}\n",
+    "84(-1) - 37(3) +7(1)\\\\\n",
+    "-58(-1) + 26(3) -5(1)\\\\\n",
+    "11(-1) -5(3) +1(1)\\\\\n",
+    "\\end{pmatrix} = \\begin{pmatrix}\n",
+    "-188\\\\\n",
+    "131\\\\\n",
+    "-25\\\\\n",
+    "\\end{pmatrix}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9313c5d0",
+   "metadata": {},
+   "source": [
+    "-------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "45d0325d",
    "metadata": {},
    "source": [
@@ -462,9 +972,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "599a96c2",
+   "metadata": {},
+   "source": [
+    "<b>Solution</b>\n",
+    "\n",
+    "Switching rows in LU Factorization is not allowed, therefore, without it given matrix cannot be converted into $A = LU$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b4b5de7",
+   "id": "52316c60",
    "metadata": {},
    "outputs": [],
    "source": []
