--- a/Ch7_EigenValuesVector_Ex7.3.ipynb
+++ b/Ch7_EigenValuesVector_Ex7.3.ipynb
@@ -1411,6 +1411,123 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1287b398",
+   "metadata": {},
+   "source": [
+    "<b> Solution </b>\n",
+    "\n",
+    "Since, its eigenvalues, $\\lambda_{1}=-2, \\lambda_{2} = -5$ and $\\lambda_{3} = -1$ are distinct, matrix $A$ is diagonalizable.\n",
+    "\n",
+    "Diagonal Eigenvalue matrix have eigenvalues along the leading diagonal of matrix. $D$ can be written as:\n",
+    "$$D = \\begin{pmatrix}\n",
+    "-2&0&0\\\\\n",
+    "0&-5&0\\\\\n",
+    "0&0&-1\\\\\n",
+    "\\end{pmatrix}$$\n",
+    "\n",
+    "invertible matrix or eigenvector matrix, $P$ is given by $P(u \\quad v \\quad w)$\n",
+    "\n",
+    "Therefore, $P = \\begin{pmatrix}\n",
+    "1&5&0\\\\\n",
+    "2&4&0\\\\\n",
+    "0&0&1\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "Next, getting $P^{-1}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c03912d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Symbolic Inverse of P:\n",
+      "⎡-2/3  5/6   0⎤\n",
+      "⎢             ⎥\n",
+      "⎢1/3   -1/6  0⎥\n",
+      "⎢             ⎥\n",
+      "⎣ 0     0    1⎦\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import sympy as sp\n",
+    "\n",
+    "P = np.array([[1, 5, 0], [2, 4, 0], [0, 0, 1]])\n",
+    "\n",
+    "P_sym = sp.Matrix(P)\n",
+    "P_inv_sym = P_sym.inv()\n",
+    "\n",
+    "# Print the symbolic inverse matrix\n",
+    "print(\"\\nSymbolic Inverse of P:\")\n",
+    "sp.pprint(P_inv_sym)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dff2a3f6",
+   "metadata": {},
+   "source": [
+    "we can get $A^3$ by $A^m = PD^mP^{-1}$\n",
+    "\n",
+    "$\\Rightarrow A^3 = PD^3P^{-1}$\n",
+    "\n",
+    "$\\Rightarrow A^3 = \\begin{pmatrix}\n",
+    "1&5&0\\\\\n",
+    "2&4&0\\\\\n",
+    "0&0&1\\\\\n",
+    "\\end{pmatrix} \\cdot \\begin{pmatrix}\n",
+    "-2&0&0\\\\\n",
+    "0&-5&0\\\\\n",
+    "0&0&-1\\\\\n",
+    "\\end{pmatrix}^3 \\cdot \\begin{pmatrix}\n",
+    "-2/3&5/6&0\\\\\n",
+    "1/3&-1/6&0\\\\\n",
+    "0&0&1\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "\n",
+    "$\\Rightarrow A^3 = \\begin{pmatrix}\n",
+    "1&5&0\\\\\n",
+    "2&4&0\\\\\n",
+    "0&0&1\\\\\n",
+    "\\end{pmatrix} \\cdot \\begin{pmatrix}\n",
+    "-8&0&0\\\\\n",
+    "0&-125&0\\\\\n",
+    "0&0&-1\\\\\n",
+    "\\end{pmatrix} \\cdot \\begin{pmatrix}\n",
+    "-2/3&5/6&0\\\\\n",
+    "1/3&-1/6&0\\\\\n",
+    "0&0&1\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "\n",
+    "$\\Rightarrow A^3 =  \\begin{pmatrix}\n",
+    "-8&-625&0\\\\\n",
+    "-16&-500&0\\\\\n",
+    "0&0&-1\\\\\n",
+    "\\end{pmatrix} \\cdot \\begin{pmatrix}\n",
+    "-2/3&5/6&0\\\\\n",
+    "1/3&-1/6&0\\\\\n",
+    "0&0&1\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "$\\Rightarrow A^3 =  \\begin{pmatrix}\n",
+    "-203&97.5&0\\\\\n",
+    "-156&70&0\\\\\n",
+    "0&0&-1\\\\\n",
+    "\\end{pmatrix} $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "61369e7a",
    "metadata": {},
    "source": [
@@ -1441,6 +1558,171 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4bee2389",
+   "metadata": {},
+   "source": [
+    "<b> Solution (a) </b> \n",
+    "\n",
+    "Eigenvalues of $A$ is given by $det(A - \\lambda I) = 0$\n",
+    "\n",
+    "$\\Rightarrow det\\begin{pmatrix}\n",
+    "2-\\lambda&1\\\\\n",
+    "1&4-\\lambda\\\\\n",
+    "\\end{pmatrix} = 0$\n",
+    "\n",
+    "$\\Rightarrow (2 - \\lambda)(4 - \\lambda) + 1 =0$<br>\n",
+    "$\\Rightarrow 8 - 6\\lambda + \\lambda^2 + 1 = 0$<br>\n",
+    "$\\Rightarrow \\lambda^2 - 6\\lambda + 9 = 0$<br>\n",
+    "\n",
+    "$\\Rightarrow (\\lambda - 3)^2 = 0$<br>\n",
+    "\n",
+    "$\\Rightarrow \\lambda = 3$\n",
+    "\n",
+    "Therefore, eigenvector can be given by $(A - \\lambda I)u = 0$\n",
+    "\n",
+    "$\\begin{pmatrix} \n",
+    "2-3&-1\\\\\n",
+    "1&4-3\\\\\n",
+    "\\end{pmatrix} \\cdot \\begin{pmatrix}\n",
+    "x\\\\\n",
+    "y\\\\\n",
+    "\\end{pmatrix} = \\begin{pmatrix}\n",
+    "0\\\\\n",
+    "0\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "$\\begin{pmatrix} \n",
+    "-1&-1\\\\\n",
+    "0&0\\\\\n",
+    "\\end{pmatrix} \\cdot \\begin{pmatrix}\n",
+    "x\\\\\n",
+    "y\\\\\n",
+    "\\end{pmatrix} = \\begin{pmatrix}\n",
+    "0\\\\\n",
+    "0\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "$\\Rightarrow -x - y = 0$<br>\n",
+    "$\\Rightarrow x = 1$ and $y = -1$ and eigenvector $u = \\begin{pmatrix}\n",
+    "1\\\\\n",
+    "-1\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "Since, there is only one non-zero equation and 2 unknowns, we have 2-1 = 1 free variable.\n",
+    "therefore, $u$ is the only independent eigenvector.\n",
+    "\n",
+    "We know that, <br>\n",
+    "Any $n \\times n$ matrix $A$ is diagonalizable $\\iff$ it has $n$ linearly independent\n",
+    "\n",
+    "Here, we have only one not 2, therefore <b>not diagonalizable</b>\n",
+    "\n",
+    "\n",
+    "<b>Solution (b)</b>\n",
+    "\n",
+    "Eigenvalues of $A$ is given by $det(A - \\lambda I) = 0$\n",
+    "\n",
+    "$\\Rightarrow det\\begin{pmatrix}\n",
+    "-2-\\lambda&4\\\\\n",
+    "-1&-6-\\lambda\\\\\n",
+    "\\end{pmatrix} = 0$\n",
+    "\n",
+    "$\\Rightarrow (-2-\\lambda)(-6 - \\lambda) + 4 = 0$\n",
+    "\n",
+    "$\\Rightarrow 12 + 8\\lambda + \\lambda^2 + 4 = 0$\n",
+    "\n",
+    "$\\Rightarrow \\lambda^2 + 8\\lambda + 16 = 0$\n",
+    "\n",
+    "$\\Rightarrow (\\lambda + 4)^2 = 0$<br>\n",
+    "$\\Rightarrow \\lambda = -4$\n",
+    "\n",
+    "Therefore, eigenvector can be given by $(A - \\lambda I)u = 0$\n",
+    "\n",
+    "$\\begin{pmatrix}\n",
+    "-2+4&4\\\\\n",
+    "-1&-6+4\\\\\n",
+    "\\end{pmatrix} \\cdot \\begin{pmatrix}\n",
+    "x\\\\\n",
+    "y\\\\\n",
+    "\\end{pmatrix} = \\begin{pmatrix}\n",
+    "0\\\\\n",
+    "0\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "$\\Rightarrow \\begin{pmatrix}\n",
+    "2&4\\\\\n",
+    "-1&-2\\\\\n",
+    "\\end{pmatrix} \\cdot \\begin{pmatrix}\n",
+    "x\\\\\n",
+    "y\\\\\n",
+    "\\end{pmatrix} = \\begin{pmatrix}\n",
+    "0\\\\\n",
+    "0\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "$\\Rightarrow 2x + 4y = 0$<br>\n",
+    "and, $-x - 2y = 0$\n",
+    "\n",
+    "$\\Rightarrow x = -2$, and $y =1$. Thus, eigenvector $u = \\begin{pmatrix}\n",
+    "-2\\\\\n",
+    "1\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "We know that, <br>\n",
+    "Any $n \\times n$ matrix $A$ is diagonalizable $\\iff$ it has $n$ linearly independent\n",
+    "\n",
+    "Here, we have only one not 2, therefore <b>not diagonalizable</b>\n",
+    "\n",
+    "\n",
+    "<b> Solution (c)</b>\n",
+    "\n",
+    "Since, $A$ is an upper triangular matrix, its eigenvalues are entries on leading diagonal i.e, $\\lambda_{1,2,3} = 1$\n",
+    "\n",
+    "Now, to get eigenvector, we use $(A - \\lambda I)u = 0$\n",
+    "\n",
+    "$\\Rightarrow \\begin{pmatrix}\n",
+    "1-1&2&3\\\\\n",
+    "0&1-1&3\\\\\n",
+    "0&0&1-1\\\\\n",
+    "\\end{pmatrix} \\cdot \\begin{pmatrix}\n",
+    "x\\\\\n",
+    "y\\\\\n",
+    "z\\\\\n",
+    "\\end{pmatrix} = \\begin{pmatrix}\n",
+    "0\\\\\n",
+    "0\\\\\n",
+    "0\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "\n",
+    "$\\Rightarrow \\begin{pmatrix}\n",
+    "0&2&3\\\\\n",
+    "0&0&3\\\\\n",
+    "0&0&0\\\\\n",
+    "\\end{pmatrix} \\cdot \\begin{pmatrix}\n",
+    "x\\\\\n",
+    "y\\\\\n",
+    "z\\\\\n",
+    "\\end{pmatrix} = \\begin{pmatrix}\n",
+    "0\\\\\n",
+    "0\\\\\n",
+    "0\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "$\\Rightarrow z = 0, y = $ and $x$ can be any non-zero $s$. Thus, eigenvector is $u = \\begin{pmatrix}\n",
+    "1\\\\\n",
+    "0\\\\\n",
+    "0\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "\n",
+    "We know that, <br>\n",
+    "Any $n \\times n$ matrix $A$ is diagonalizable $\\iff$ it has $n$ linearly independent\n",
+    "\n",
+    "Here, we have only one not 2, therefore <b>not diagonalizable</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7014f6fa",
    "metadata": {},
    "source": [
@@ -1458,6 +1740,205 @@
     "-4&2\\\\\n",
     "-9&5\\\\\n",
     "\\end{pmatrix}$. Determine (i) $A^{11}\\quad$(ii)$A^{-1}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "142dc75b",
+   "metadata": {},
+   "source": [
+    "<b> Solution (i) </b> \n",
+    "\n",
+    "Eigenvalue can be obtained by $det(A - \\lambda I) = 0$\n",
+    "\n",
+    "$\\Rightarrow det\\begin{pmatrix}\n",
+    "4 - \\lambda& 2\\\\\n",
+    "-9 & 5 - \\lambda\\\\\n",
+    "\\end{pmatrix} = 0$\n",
+    "\n",
+    "$\\Rightarrow (-4 - \\lambda)(5 - \\lambda) - (-9)2 = 0$\n",
+    "\n",
+    "$\\Rightarrow - 20 + 4\\lambda - 5\\lambda + \\lambda^2 + 18 = 0$<br>\n",
+    "$\\Rightarrow \\lambda^2 - \\lambda -2 = 0$<br>\n",
+    "$\\Rightarrow (\\lambda + 1)(\\lambda -2) = 0$\n",
+    "\n",
+    "$\\Rightarrow \\lambda = -1$ or $\\lambda = 2$\n",
+    "\n",
+    "For eigenvector $\\lambda_{1} = -1$, eigenvector can be given by $(A - \\lambda I)u =0$\n",
+    "\n",
+    "$\\Rightarrow \\begin{pmatrix}\n",
+    "-4 + 1&2\\\\\n",
+    "-9 & 5+1\\\\\n",
+    "\\end{pmatrix} \\cdot \\begin{pmatrix}\n",
+    "x\\\\\n",
+    "y\\\\\n",
+    "\\end{pmatrix} = \\begin{pmatrix}\n",
+    "0\\\\\n",
+    "0\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "$\\Rightarrow \\begin{pmatrix}\n",
+    "-3&2\\\\\n",
+    "-9&6\\\\\n",
+    "\\end{pmatrix} \\cdot\\begin{pmatrix}\n",
+    "x\\\\\n",
+    "y\\\\\n",
+    "\\end{pmatrix} = \\begin{pmatrix}\n",
+    "0\\\\\n",
+    "0\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "$\\Rightarrow -3x + 2y =0$<br>\n",
+    "and, $-9x + 6y = 0$\n",
+    "\n",
+    "$\\Rightarrow x = 2$ and $y = 3$. Thus eigenvector $u = \\begin{pmatrix}\n",
+    "2\\\\\n",
+    "3\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "For $\\lambda_{2} = 2$, again eigenvector can be given by $(A - \\lambda )u = 0$\n",
+    "\n",
+    "$\\Rightarrow \\begin{pmatrix}\n",
+    "-4 -2& 2\\\\\n",
+    "-9 & 5-2\\\\\n",
+    "\\end{pmatrix} \\cdot \\begin{pmatrix}\n",
+    "x\\\\\n",
+    "y\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "$\\Rightarrow \\begin{pmatrix}\n",
+    "-6&2\\\\\n",
+    "-9&3\\\\\n",
+    "\\end{pmatrix} \\cdot \\begin{pmatrix}\n",
+    "x\\\\\n",
+    "y\\\\\n",
+    "\\end{pmatrix} = \\begin{pmatrix}\n",
+    "0\\\\\n",
+    "0\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "$\\Rightarrow -6x + 2y = 0$<br>\n",
+    "and, $-9x + 3y = 0$\n",
+    "\n",
+    "$\\Rightarrow x =1$ and $y =3$. Thus, eigenvector $ v = \\begin{pmatrix}\n",
+    "1\\\\\n",
+    "3\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "Therefore, eigenvector matrix, $P$ is given by $P = (u \\quad v)$\n",
+    "\n",
+    "$\\Rightarrow P = \\begin{pmatrix}\n",
+    "2&1\\\\\n",
+    "3&3\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "Now, $P^{-1} = \\frac{1}{2(3) - 3(1)}\\begin{pmatrix}\n",
+    "3&-1\\\\\n",
+    "-3&2\\\\\n",
+    "\\end{pmatrix} = \\frac{1}{3}\\begin{pmatrix}\n",
+    "3&-1\\\\\n",
+    "-3&2\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "Also, diagonal matrix, $D$, is given by eigenvalues along the leading diagonal.\n",
+    "\n",
+    "Then, $D = \\begin{pmatrix}\n",
+    "-1&0\\\\\n",
+    "0&2\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "We also know that, $A^m = PD^m P^{-1}$\n",
+    "\n",
+    "Therefore, $A^{11} = \\begin{pmatrix}\n",
+    "2&1\\\\\n",
+    "3&3\\\\\n",
+    "\\end{pmatrix} \\cdot \\begin{pmatrix}\n",
+    "-1&0\\\\\n",
+    "0&2\\\\\n",
+    "\\end{pmatrix}^{11} \\cdot \\frac{1}{3}\\begin{pmatrix}\n",
+    "3&-1\\\\\n",
+    "-3&2\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "$\\qquad = \\frac{1}{3} \\begin{pmatrix}\n",
+    "2&1\\\\\n",
+    "3&3\\\\\n",
+    "\\end{pmatrix} \\begin{pmatrix}\n",
+    "-1&0\\\\\n",
+    "0&2048\\\\\n",
+    "\\end{pmatrix} \\begin{pmatrix}\n",
+    "3&-1\\\\\n",
+    "-3&2\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "$\\qquad = \\frac{1}{3}\\begin{pmatrix}\n",
+    "-2&2048\\\\\n",
+    "-3&6144\\\\\n",
+    "\\end{pmatrix} \\begin{pmatrix}\n",
+    "3&-1\\\\\n",
+    "-3&2\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "$\\qquad = \\frac{1}{3}\\begin{pmatrix}\n",
+    "-6150&4098\\\\\n",
+    "-18441&12291\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "$\\Rightarrow A^{11} = \\begin{pmatrix}\n",
+    "-2050&1366\\\\\n",
+    "-6147&4097\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "\n",
+    "<b> Solution (ii)</b>\n",
+    "\n",
+    "$A^{-1} = PD^{-1}P^{-1}$\n",
+    "\n",
+    "$\\qquad = \\begin{pmatrix}\n",
+    "2&1\\\\\n",
+    "3&3\\\\\n",
+    "\\end{pmatrix} \\begin{pmatrix}\n",
+    "-1&0\\\\\n",
+    "0&2\\\\\n",
+    "\\end{pmatrix}^{-1} \\cdot \\frac{1}{3}\\begin{pmatrix}\n",
+    "3&-1\\\\\n",
+    "-3&2\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "$\\qquad = \\frac{1}{3}\\begin{pmatrix}\n",
+    "2&1\\\\\n",
+    "3&3\\\\\n",
+    "\\end{pmatrix} \\begin{pmatrix}\n",
+    "-1&0\\\\\n",
+    "0&1/2\\\\\n",
+    "\\end{pmatrix} \\cdot \\begin{pmatrix}\n",
+    "3&-1\\\\\n",
+    "-3&2\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "$\\qquad = \\frac{1}{6}\\begin{pmatrix}\n",
+    "2&1\\\\\n",
+    "3&3\\\\\n",
+    "\\end{pmatrix} \\begin{pmatrix}\n",
+    "-2&0\\\\\n",
+    "0&1\\\\\n",
+    "\\end{pmatrix} \\cdot \\begin{pmatrix}\n",
+    "3&-1\\\\\n",
+    "-3&2\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "$\\qquad = \\frac{1}{6} \\begin{pmatrix}\n",
+    "-4&1\\\\\n",
+    "-6&3\\\\\n",
+    "\\end{pmatrix} \\cdot \\begin{pmatrix}\n",
+    "3&-1\\\\\n",
+    "-3&2\\\\\n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    "$\\qquad = \\frac{1}{6} \\begin{pmatrix}\n",
+    "-15&6\\\\\n",
+    "-27&12\\\\\n",
+    "\\end{pmatrix}$"
    ]
   },
   {
